update services methods